@@ -59,9 +59,9 @@ libclib:
 	if test -d src/clib ; then \
 	( cd src/clib ; $(MAKE) ) ; fi
 
-libfftqe:
-	if test -d src/fftqe ; then \
-	( cd src/fftqe ; $(MAKE) ) ; fi
+libfftxlib:
+	if test -d src/fftxlib ; then \
+	( cd src/fftxlib ; $(MAKE) ) ; fi
 
 libwant: libextlibs
 	if test -d src/baselib ; then \
@@ -79,7 +79,7 @@ embed: libextlibs libclib libwant transport wannier
 	if test -d src/embed ; then \
 	( cd src/embed ; $(MAKE) ) ; fi
 
-odd:   libextlibs libclib libfftqe libwant wannier
+odd:   libextlibs libclib libfftxlib libwant wannier
 	if test -d src/odd ; then \
 	( cd src/odd ; $(MAKE) ) ; fi
 
@@ -94,7 +94,7 @@ clean:
 	if test -d extlibs ;       then ( cd extlibs;       $(MAKE) clean ) ; fi
 	if test -d plugins ;       then ( cd plugins;       $(MAKE) clean ) ; fi
 	if test -d src/clib ;      then ( cd src/clib;      $(MAKE) clean ) ; fi
-	if test -d src/fftqe ;     then ( cd src/fftqe;     $(MAKE) clean ) ; fi
+	if test -d src/fftxlib ;   then ( cd src/fftxlib;   $(MAKE) clean ) ; fi
 	if test -d src/baselib ;   then ( cd src/baselib;   $(MAKE) clean ) ; fi
 	if test -d src/wannier ;   then ( cd src/wannier;   $(MAKE) clean ) ; fi
 	if test -d src/transport ; then ( cd src/transport; $(MAKE) clean ) ; fi
@@ -120,7 +120,7 @@ clean_all : clean_all_extlibs clean_all_plugins clean
 	- /bin/rm -rf make.sys ./config/configure.msg \
 		./config.log config.status \
 		./config/*.lineno \
-		./include/configure.h ./include/fftqe_defs.h \
+		./include/configure.h ./include/fftx_defs.h \
 	        ./include/c_defs.h ./include/iotk_config.h \
 		*/dum1 */dum2 
 	- touch make.sys
