@@ -9,7 +9,7 @@ cd ..
 TOPDIR=`pwd`
 BINDIR=$TOPDIR/config
 
-DIR_LIST="fftqe baselib wannier transport tools embed"
+DIR_LIST="fftxlib baselib wannier transport tools embed"
 SPECIAL_MODULES="etsf_io  etsf_io_tools  etsf_io_low_level \
                  mkl_dfti.f90  iotk_module iotk_base  iotk_error_interf \
                  phigemm  magma  iso_c_binding \
@@ -20,12 +20,12 @@ for DIR in $DIR_LIST
 do
     # set inter-directory dependencies
     case $DIR in
-        fftqe )     DEPENDS="../../include"            ;;
-        baselib )   DEPENDS="../../include ../fftqe"   ;;
-        wannier )   DEPENDS="../../include ../fftqe ../baselib" ;;
-        transport ) DEPENDS="../../include ../fftqe ../baselib ../wannier " ;;
-        tools )     DEPENDS="../../include ../fftqe ../baselib ../wannier " ;;
-        embed )     DEPENDS="../../include ../fftqe ../baselib ../wannier ../transport" ;;
+        fftxlib )   DEPENDS="../../include"            ;;
+        baselib )   DEPENDS="../../include ../fftxlib"   ;;
+        wannier )   DEPENDS="../../include ../fftxlib ../baselib" ;;
+        transport ) DEPENDS="../../include ../fftxlib ../baselib ../wannier " ;;
+        tools )     DEPENDS="../../include ../fftxlib ../baselib ../wannier " ;;
+        embed )     DEPENDS="../../include ../fftxlib ../baselib ../wannier ../transport" ;;
     esac
 
     # generate dependencies file
@@ -37,7 +37,7 @@ do
     fi
 
     # handle special cases
-    if [ "$DIR" = "baselib" -o "$DIR" = "fftqe" ] ; then
+    if [ "$DIR" = "baselib" -o "$DIR" = "fftxlib" ] ; then
         mv make.depend make.depend.tmp
         sed 's/@fftw.c@/fftw.c/
              s/@fftw2.c@/fftw2.c/'  make.depend.tmp > make.depend
