@@ -5,7 +5,7 @@
 ! in the root directory of the present distribution,
 ! or http://www.gnu.org/copyleft/gpl.txt .
 !
-#include "fftqe_defs.h"
+#include "fftx_defs.h"
 !
 !=----------------------------------------------------------------------=
    MODULE stick_set
